# product-trends-mcp

./: .env.example  Dockerfile  README.md  docker-compose.yml  example.env  pyproject.toml  smithery.yaml
.cursor/: mcp.json
examples/: README.md  client_examples.py  http_client_examples.py
sample-products/: nutty-delight.md
src/product_trends_mcp/: __init__.py  server.py
tests/: __init__.py  run_e2e_tests.py  test_e2e_server.py  test_scrapers.py  test_sqlite_db.py  test_taxonomy_endpoints.py
